Lucene Benchmark Contrib Change Log

The Benchmark contrib package contains code for benchmarking Lucene in a variety of ways.

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

10/07/2011
  LUCENE-3262: Facet benchmarking - Benchmark tasks and sources were added for indexing
  with facets, demonstrated in facets.alg. (Gilad Barkai, Doron Cohen)
    
09/25/2011
  LUCENE-3457: Upgrade commons-compress to 1.2 (and undo LUCENE-2980's workaround).
  (Doron Cohen)
  
05/25/2011
  LUCENE-3137: ExtractReuters supports out-dir param suffixed by a slash. (Doron Cohen)

03/24/2011
  LUCENE-2977: WriteLineDocTask now automatically detects how to write -
  GZip or BZip2 or Plain-text - according to the output file extension.
  Property bzip.compression of WriteLineDocTask was canceled. (Doron Cohen)
  
03/23/2011
  LUCENE-2980: Benchmark's ContentSource no more requires lower case file suffixes 
  for detecting file type (gzip/bzip2/text). As part of this fix worked around an 
  issue with gzip input streams which were remaining open (See COMPRESS-127).
  (Doron Cohen) 

03/22/2011
  LUCENE-2978: Upgrade benchmark's commons-compress from 1.0 to 1.1 as 
  the move of gzip decompression in LUCENE-1540 from Java's GZipInputStream
  to commons-compress 1.0 made it 15 times slower. In 1.1 no such slow-down
  is observed. (Doron Cohen)   
  
03/21/2011
  LUCENE-2958: WriteLineDocTask improvements - allow to emit line docs also for empty
  docs, and be flexible about which fields are added to the line file. For this, a header
  line was added to the line file. That header is examined by LineDocSource. Old line
  files which have no header line are handled as before, imposing the default header.
  (Doron Cohen, Shai Erera, Mike McCandless)
  
03/21/2011
  LUCENE-2964: Allow benchmark tasks from alternative packages,
  specified through a new property "alt.tasks.packages".
  (Doron Cohen, Shai Erera)
  
03/20/2011