@@ -5,6 +5,10 @@ The Benchmark contrib package contains code for benchmarking Lucene in a variety
 For more information on past and future Lucene versions, please see:
 http://s.apache.org/luceneversions
 
+2/15/2011
+  LUCENE-3768: fix typos in .alg files, and add test that all .alg files in conf/
+  can be parsed.  (Sami Siren via Robert Muir)
+
 10/07/2011
   LUCENE-3262: Facet benchmarking - Benchmark tasks and sources were added for indexing
   with facets, demonstrated in facets.alg. (Gilad Barkai, Doron Cohen)
